--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "swiper": "^6.3.3"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
